# sandstorm-ld-preload-shim

./: .gitignore  .gitmodules  CapnpFile.c++  CapnpFile.h  Cargo.toml  EventInjector.c++  EventInjector.h  EventLoopData.c++  EventLoopData.h  Makefile  PseudoFile.h  README.md  Vfs.c++  Vfs.h  build.rs  filesystem.capnp  oflags.h  preload_server.capnp  real.c++  real.h  shim.c++
src/: capnp_file.rs  inject.rs  lib.rs  real.rs  result.rs  vfs.rs  wrappers.rs
