[package]
name = "sandstorm-preload"
version = "0.1.0"
authors = ["Ian Denhardt <ian@zenhack.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.70"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]
